Set up scaffolding for new tabs and settings structure
Why: we want the app to have a layout with three tabs: Home, Exposure History, and Connect.

This Commit:
- Updates the tab bar to have Home, Exposure History, and Connect tabs
- Scaffolds out the ConnectStack
- Adds a settings button to the top left of the Home screen that links to the Settings
menu, previously the More menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,6 +147,7 @@
     "bluetooth_info_header": "Bluetooth",
     "get_more_info": "Get more info on {{technology}}",
     "fix": "Fix issues with {{technology}}",
+    "open_settings": "Open Settings",
     "bluetooth": {
       "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "bluetooth_disabled_error_message": "Go to the Settings app and enable Bluetooth to fix this error",
@@ -195,11 +196,8 @@
   "navigation": {
     "exposure_history": "Exposure History",
     "home": "Home",
-    "more": "More",
-    "report_issue": "Report Issue",
-    "self_assessment": "Self Assessment",
-    "more_info": "More Info",
-    "exposure": "Exposure"
+    "exposure": "Exposure",
+    "connect": "Connect"
   },
   "onboarding": {
     "app_setup_complete_header": "App Setup Complete!",
