Lokalise latest- missing translation for Chamorro, Japanese, Korean, Greek, Tagalog added. (#355)
* Lokalise latest chamorro, japanese and korean missing keys

* deleting strings.xml changes

* Create strings.xml

* strings.xml fix

* Tagalog name fix

--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -1,5 +1,5 @@
 {
-  "_display_name": "Ingles",
+  "_display_name": "Tagalog",
   "about": {
     "description": "Ang {{applicationName}} app ay ginawang magagamit ng {{healthAuthorityName}}",
     "operating_system_abbr": "OS",
@@ -193,6 +193,7 @@
     "select_language": "Piliin ang wika"
   },
   "navigation": {
+    "exposure": "Pagkakalantad",
     "exposure_history": "Exposure History o Kasaysayan ng Pagkalantad sa Posibleng Pagkahawa",
     "home": "Home o Umpisa",
     "more": "Higit pa",
