--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -43,17 +43,14 @@
   "common": {
     "alert": "Συναγερμός",
     "back": "Πίσω",
-    "cancel": "Ακύρωση",
     "close": "Κλείσιμο",
     "continue": "Συνέχεια",
     "disabled": "Απενεργοποιήθηκε",
     "done": "Ολοκληρώθηκε",
-    "enable": "Ενεργοποίηση",
     "enabled": "Ενεργοποιήθηκε",
     "maybe_later": "Ίσως αργότερα",
     "next": "Επόμενο",
     "no_thanks": "Όχι, ευχαριστώ",
-    "okay": "Εντάξει",
     "settings": "Άνοιγμα Ρυθμίσεων",
     "skip": "Παράλειψη",
     "something_went_wrong": "Κάτι πήγε στραβά",
@@ -167,6 +164,7 @@
     "location_info_body_1": "Η τεχνολογία Ειδοποίησης έκθεσης χρησιμοποιεί σάρωση Bluetooth για να κατανοήσει ποιες συσκευές είναι κοντά η μια στην άλλη. Για να χρησιμοποιήσετε τη σάρωση Bluetooth σε όλα τα τηλέφωνα με Android 6.0 ή μεταγενέστερη έκδοση, η τοποθεσία σας πρέπει να είναι ενεργοποιημένη για όλες τις εφαρμογές, όχι μόνο για εφαρμογές που έχουν δημιουργηθεί με το Σύστημα ειδοποιήσεων έκθεσης.",
     "location_info_header": "Τοποθεσία",
     "location_info_subheader_1": "Γιατί πρέπει να είναι ενεργοποιημένη η τοποθεσία μου;",
+    "open_settings": "Άνοιγμα Ρυθμίσεων",
     "proximity_tracing_info_body_1": "Αν τα smartphones με εγκατεστημένη την εφαρμογή είναι ενεργοποιημένα, έχουν ενεργοποιημένο το bluetooth και βρίσκονται κοντά το ένα στο άλλο για ένα χρονικό διάστημα, καταχωρείται στη συσκευή σας μια συνάντηση.",
     "proximity_tracing_info_body_2": "Σε περίπτωση συνάντησης, τα δεδομένα και οι πληροφορίες σας παραμένουν ανώνυμα. Η εφαρμογή δεν αποθηκεύει προσωπικά δεδομένα. Ανταλλάσσονται μόνο τυχαία αναγνωριστικά. Αυτά διαγράφονται εντός 14 ημερών.",
     "proximity_tracing_info_header": "Ανίχνευση εγγύτητας",
@@ -176,12 +174,10 @@
     "status_icon_inactive_label": "Ένα λευκό x σε έναν κόκκινο κύκλο"
   },
   "label": {
-    "activate_proximity_tracing": "Ενεργοποίηση εντοπισμού εγγύτητας",
     "check": "Σημάδι ελέγχου",
     "checked_checkbox": "Επιλεγμένο πλαίσιο",
     "go_to_home_view": "Μετάβαση στην Αρχική Σελίδα",
     "language_icon": "Εικονίδιο με περίγραμμα μιας υδρογείου σφαίρας",
-    "launch_activate_location": "Ενεργοποίηση Τοποθεσίας",
     "launch_enable_notif": "Ενεργοποίηση Ειδοποιήσεων",
     "launch_get_started": "Ξεκινήστε",
     "launch_screen1_header": "Καλώς ήρθατε στο PathCheck",
@@ -196,10 +192,7 @@
     "exposure": "Έκθεση",
     "exposure_history": "Ιστορικό Εκθέσεων",
     "home": "Αρχική",
-    "more": "Περισσότερα",
-    "more_info": "Περισσότερες Πληροφορίες",
-    "report_issue": "Αναφέρετε ένα πρόβλημα",
-    "self_assessment": "Υγεία"
+    "more_info": "Περισσότερες Πληροφορίες"
   },
   "onboarding": {
     "activation_header_title": "Ρύθμιση εφαρμογής",
@@ -237,8 +230,6 @@
       "subheader_4": "Κάθε τηλέφωνο καλεί περιοδικά τον διακομιστή για τη λίστα των επισημασμένων κωδικών και αναζητά ταιριάσματα",
       "subheader_5": "Θα ειδοποιηθείτε εάν η {{applicationName}} εντοπίσει θετική αντιστοίχιση με επισημασμένο αναγνωριστικό"
     },
-    "proximity_tracing_alert_body": "Η κινητή συσκευή σας μπορεί να συλλέγει και να μοιράζεται με ασφάλεια τυχαία αναγνωριστικά με κοντινές συσκευές. {{applicationName}} μπορεί να χρησιμοποιήσει αυτά τα αναγνωριστικά για να σας ειδοποιήσει εάν έχετε εκτεθεί στον COVID-19. Η ημερομηνία, η διάρκεια και η ισχύς του σήματος μιας έκθεσης θα κοινοποιηθούν μέσω {{applicationName}} .",
-    "proximity_tracing_alert_header": "Ενεργοποίηση εντοπισμού εγγύτητας από το \" {{applicationName}} \";",
     "proximity_tracing_body1": "Αν τα smartphones με εγκατεστημένη την εφαρμογή είναι ενεργοποιημένα, έχουν ενεργοποιημένο το bluetooth και βρίσκονται κοντά το ένα στο άλλο για ένα χρονικό διάστημα, καταχωρείται στη συσκευή σας μια συνάντηση.",
     "proximity_tracing_body2": "Σε περίπτωση συνάντησης, τα δεδομένα και οι πληροφορίες σας παραμένουν ανώνυμα. Η εφαρμογή δεν αποθηκεύει προσωπικά δεδομένα. Ανταλλάσσονται μόνο τυχαία αναγνωριστικά. Αυτά διαγράφονται εντός 14 ημερών.",
     "proximity_tracing_button": "Ενεργοποίηση εντοπισμού εγγύτητας",
