--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -32,10 +32,8 @@
     "start_title": "Ответьте на вопросы о своих симптомах и истории болезни, чтобы узнать, что делать дальше с COVID-19"
   },
   "common": {
-    "cancel": "Отмена",
     "continue": "Продолжить",
     "done": "Готово",
-    "enable": "Включить",
     "next": "Готово",
     "something_went_wrong": "Что-то пошло не так",
     "start": "Начать"
@@ -53,7 +51,8 @@
       "all_services_on_subheader": "Уведомления об опасности включены",
       "tracing_off_header": "Уведомления об опасности отключены",
       "tracing_off_subheader": "Включить уведомления об опасности, чтобы получать информацию о нахождении в опасных зонах"
-    }
+    },
+    "open_settings": "Откройте настройки"
   },
   "label": {
     "launch_enable_notif": "Включить уведомления",
@@ -62,8 +61,7 @@
     "privacy_policy": "Политика конфиденциальности"
   },
   "navigation": {
-    "home": "Главная страница",
-    "more": "Подробнее"
+    "home": "Главная страница"
   },
   "onboarding": {
     "notification_header": "Хотите получать уведомления, если окажетесь поблизости с носителем вируса?",
