--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -29,10 +29,8 @@
     "start_title": "Responda preguntas sobre sus síntomas e historial médico para saber qué hacer a continuación sobre COVID-19"
   },
   "common": {
-    "cancel": "Cancelar",
     "continue": "Continuar",
     "done": "Hecho",
-    "enable": "Habilitar",
     "next": "Siguiente"
   },
   "export": {
@@ -45,6 +43,9 @@
     "how_does_this_work_para": "Cuando las Notificaciones de Exposición están activadas, tu teléfono usará Bluetooth para intercambiar y guardar cadenas de carácteres aleatorias (llamados IDs aleatorios/random IDs) de aquellos teléfonos que tengan también las Notificaciones de Exposición activadas. Estas cadenas de caracteres aleatorias no te identificarán a tí personalmente con respecto a los otros usuarios y variarån muchas veces al día para proteger tu privacidad. La fecha y la duración del encuento serán grabadas así como la distancia entre los dos teléfonos. Cuando una persona reporta un diagnóstico positivo, la cadena aleatoria de caracteres o random ID de su teléfono es marcada para anónimamente notificar al resto de usuarios. No se compartirá la información sobre su localización ni ninguna información personal.",
     "why_did_i_get_an_en_para": "Recibirás una notificación de exposición cuando te hayas cruzado con una persona que más taerde haya recibido un diagnóstico confirmado o haya dado positivo en un test por COVID-19 siempre y cuando elija notificar al resto."
   },
+  "home": {
+    "open_settings": "Abrir Opciones de Configuración"
+  },
   "label": {
     "launch_enable_notif": "Permitir notificaciones",
     "launch_get_started": "Iniciar",
@@ -52,8 +53,7 @@
     "privacy_policy": "Política de privacidad"
   },
   "navigation": {
-    "home": "Inicio",
-    "more": "Más"
+    "home": "Inicio"
   },
   "onboarding": {
     "notification_header": "¿Desea recibir notificaciones cuando pueda haberse cruzado con el virus?",
