--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -288,6 +288,7 @@
     "exposure_history": "Exposure History",
     "exposures": "Exposures",
     "legal": "Legal",
-    "report_issue": "Report an Issue"
+    "report_issue": "Report an Issue",
+    "how_the_app_works": "How the app works"
   }
 }
