Fix key on callback form translation
Why:
----

There is a key inside a translation for the callback form that has a
space and lokalise is not interpreting as a variable.

This Commit:
----

- Correct callback form translation
- Updated translations

--- a/android/app/src/main/res/values-ht-rHT/strings.xml
+++ b/android/app/src/main/res/values-ht-rHT/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <!-- Shown on app info, app switcher, etc -->
-  <string name="app_name" translatable="false">Chase Kowona (\"PathCheck\") BT</string>
-  <!-- Shown below icon on launcher only -->
-  <string name="app_name_short" translatable="false">Chase Kowona (\"PathCheck\") BT</string>
+  <string name="exposure_notification_channel_description">Avètisman Notifikasyon Ekspozisyon.</string>
+  <string name="exposure_notification_channel_name">Notifikasyon Ekspozisyon</string>
+  <string name="exposure_notification_message">Yon moun ou te tou pre teste pozitif pou COVID-19. Tape pou plis enfòmasyon.</string>
+  <string name="exposure_notification_title">Ekspozisyon a COVID-19 posib</string>
 </resources>
