--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -118,7 +118,10 @@
       "isolate": "Isolate",
       "next_steps": "Next Steps",
       "wash_your_hands": "Wash your hands",
-      "wear_a_mask": "Wear a mask"
+      "wear_a_mask": "Wear a mask",
+      "schedule_callback": "Schedule a call to get support from a contact tracer from the {{healthAuthorityName}}.",
+      "speak_with_contact_tracer": "Speak with a contact tracer",
+      "call_later": "Call later"
     },
     "exposure_window": {
       "four_to_six_days_ago": "4 to 6 days ago",
