--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,8 @@
   "about": {
     "description": "The {{applicationName}} app is made available by {{healthAuthorityName}}",
     "operating_system_abbr": "OS:",
-    "version": "Version:"
+    "version": "Version:",
+    "emergency_contact": "Emergency Contact"
   },
   "assessment": {
     "agree_question_description": "Stop and call emergency services if you are experiencing:\n• Severe, constant chest pain or pressure \n• Extreme difficulty breathing \n• Severe, constant lightheadedness \n• Serious disorientation or unresponsiveness",
