Scaffold out symptom checker stack

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -210,6 +210,7 @@
     "exposure": "Exposure",
     "exposure_history": "Exposure History",
     "home": "Home",
+    "symptom_checker": "symptom_checker",
     "more_info": "More Info"
   },
   "onboarding": {
