--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -214,7 +214,11 @@
     "more_info": "More Info"
   },
   "symptom_checker": {
-    "my_health": "My Health"
+    "my_health": "My Health",
+    "check-in": "Check-in",
+    "how_are_you_feeling": "How are you feeling today?",
+    "good": "Good",
+    "not_well": "Not well"
   },
   "onboarding": {
     "activation_header_title": "App Setup",
