--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -210,7 +210,15 @@
     "exposure": "Exposure",
     "exposure_history": "Exposure History",
     "home": "Home",
+    "symptom_checker": "symptom_checker",
     "more_info": "More Info"
+  },
+  "symptom_checker": {
+    "my_health": "My Health",
+    "check-in": "Check-in",
+    "how_are_you_feeling": "How are you feeling today?",
+    "good": "Good",
+    "not_well": "Not well"
   },
   "onboarding": {
     "activation_header_title": "App Setup",
